--- a/battleship/build.gradle
+++ b/battleship/build.gradle
@@ -14,6 +14,7 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.0'
 	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testCompileOnly 'junit:junit:4.12' 
 	testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.3.1'
