Added get-port as a dependency to prevent port 8080 from being used when it is used by the server/app

--- a/ui/package.json
+++ b/ui/package.json
@@ -28,6 +28,7 @@
     "preact-cli": "^2.0.0"
   },
   "dependencies": {
+    "get-port": "^5.1.1",
     "node-sass": "^4.0.0",
     "preact": "^8.5.2",
     "preact-compat": "^3.17.0",
