--- a/ui/package.json
+++ b/ui/package.json
@@ -28,6 +28,7 @@
     "preact-cli": "^2.0.0"
   },
   "dependencies": {
+    "jquery": "^3.6.0",
     "get-port": "^5.1.1",
     "node-sass": "^4.0.0",
     "preact": "^8.5.2",
